--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -10,11 +10,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="user-info-container">
-        <form method="POST" action="/user/create-user">
-            <div class="container">
-                <div class="row">
-                    <div class="mb-3 col-6 mt-3">
+    <div class="container">
+        <div class="row">
+            <div class="user-info-container">
+                <form method="POST" action="/user/create-user">
+                    <div class=" mt-3">
+                        <h3>Create New User</h3>
+                    </div>
+                    <div class="mb-3 col-6  mt-3">
                         <label for="email" class="form-label">Email address</label>
                         <input type="email" name="email"class="form-control" id="email" aria-describedby="emailHelp" required>
                     </div>
@@ -31,9 +34,38 @@
                     <div class="mt-12">
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
-                </div>
+                </form>
             </div>
-        </form>
+
+            <div class="table-users mt-3">
+                <div class="mt-3">
+                    <h3>List Users</h3>
+                </div>
+                <table class="table table-hover table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">UserName</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% userList.forEach(function(item, index) { %>
+                            <tr>
+                                <th scope="row"><%= index + 1 %></th>
+                                <td><%= item.email %></td>
+                                <td><%= item.username %></td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">Edit</button>
+                                    <button type="button" class="btn btn-danger">Delete</button>
+                                </td>
+                            </tr>
+                        <% }) %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </body>
 </html>
