--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -44,7 +44,7 @@
                 <table class="table table-hover table-bordered">
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
+                            <th scope="col">ID</th>
                             <th scope="col">Email</th>
                             <th scope="col">UserName</th>
                             <th scope="col">Action</th>
@@ -58,7 +58,9 @@
                                 <td><%= item.username %></td>
                                 <td>
                                     <button type="button" class="btn btn-primary">Edit</button>
-                                    <button type="button" class="btn btn-danger">Delete</button>
+                                    <form style="display: inline" method="POST" action="/delete-user/<%= item.id %>">
+                                        <button type="submit"class="btn btn-danger">Delete</button>
+                                    </form>
                                 </td>
                             </tr>
                         <% }) %>
