--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>List User</title>
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
@@ -53,12 +53,22 @@
                     <tbody>
                         <% userList.forEach(function(item, index) { %>
                             <tr>
-                                <th scope="row"><%= index + 1 %></th>
+                                <th scope="row"><%= item.id %></th>
                                 <td><%= item.email %></td>
                                 <td><%= item.username %></td>
                                 <td>
-                                    <button type="button" class="btn btn-primary">Edit</button>
-                                    <form style="display: inline" method="POST" action="/delete-user/<%= item.id %>">
+                                    <form
+                                        style="display: inline" 
+                                        method="GET" 
+                                        action="/update-user/<%= item.id %>"
+                                    >
+                                        <button type="submit" class="btn btn-primary">Edit</button>
+                                    </form>
+                                    <form 
+                                        style="display: inline" 
+                                        method="POST" 
+                                        action="/delete-user/<%= item.id %>"
+                                    >
                                         <button type="submit"class="btn btn-danger">Delete</button>
                                     </form>
                                 </td>
